sample3/sample3.tf
provider "aws" {
  profile = "default"
  region  = var.aws_region
}

resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr
  instance_tenancy = "default"
  enable_dns_support = "true"
  enable_dns_hostnames = "true"
  tags = {
    Name = var.vpc_name
  }
}
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "sample3-igw"
  }
}

resource "aws_eip" "nat_gateway" {
  vpc        = true
  depends_on = [aws_internet_gateway.igw]
  tags = {
    Name    = "sample3-nat-eip"
  }
}

resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.nat_gateway.id
  subnet_id     = aws_subnet.public-a.id
  depends_on    = [aws_internet_gateway.igw]

  tags = {
    Name    = "sample3-nat-gw"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "public"
  }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "private"
  }
}

resource "aws_route_table" "db" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "db"
  }
}

resource "aws_subnet" "public-a" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = var.subnet_cidr["public-a"]
  availability_zone = var.aws_availability_zones["a"]
  map_public_ip_on_launch=true
  tags = {
    Name = var.subnet_name_tag["public-a"]
  }
}

resource "aws_subnet" "public-c" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = var.subnet_cidr["public-c"]
  availability_zone = var.aws_availability_zones["c"]
  map_public_ip_on_launch=true
  tags = {
    Name = var.subnet_name_tag["public-a"]
  }
}

resource "aws_subnet" "private-a" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = var.subnet_cidr["private-a"]
  availability_zone = var.aws_availability_zones["a"]

  tags = {
    Name = var.subnet_name_tag["private-a"]
  }
}

resource "aws_subnet" "private-c" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = var.subnet_cidr["private-c"]
  availability_zone = var.aws_availability_zones["c"]

  tags = {
    Name = var.subnet_name_tag["private-c"]
  }
}

resource "aws_subnet" "db-a" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = var.subnet_cidr["db-a"]
  availability_zone = var.aws_availability_zones["a"]

  tags = {
    Name = var.subnet_name_tag["db-a"]
  }
}

resource "aws_subnet" "db-c" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = var.subnet_cidr["db-c"]
  availability_zone = var.aws_availability_zones["c"]

  tags = {
    Name = var.subnet_name_tag["db-c"]
  }
}

resource "aws_route_table_association" "public-a" {
  subnet_id      = aws_subnet.public-a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public-c" {
  subnet_id      = aws_subnet.public-c.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private-a" {
  subnet_id      = aws_subnet.private-a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private-c" {
  subnet_id      = aws_subnet.private-c.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route" "public" {
  route_table_id         = aws_route_table.public.id
  gateway_id             = aws_internet_gateway.igw.id
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_route" "private" {
  route_table_id         = aws_route_table.private.id
  nat_gateway_id         = aws_nat_gateway.nat_gateway.id
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_route" "db" {
  route_table_id         = aws_route_table.db.id
  nat_gateway_id         = aws_nat_gateway.nat_gateway.id
  destination_cidr_block = "0.0.0.0/0"
}
